[CSS] -webkit-var prefix is case-sensitive https://bugs.webkit.org/show_bug.cgi?id=116829

Reviewed by Darin Adler.

Source/WebCore:

Tests: Added case to fast/css/variables/case-sensitive.html

* css/CSSParser.cpp:
(WebCore::isEqualToCSSCaseSensitiveIdentifier): Add variant to
IsEqualToCSSIdentifier that respects case-sensitivity.
(WebCore::CSSParser::realLex): Use the above method for CSS
variable declarations.

LayoutTests:

* fast/css/variables/case-sensitive.html: Add a
check for case-sensitiveness of the prefix of
variable declarations.
* fast/css/variables/case-sensitive-expected.html: Update.

Canonical link: https://commits.webkit.org/135143@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150776 268f45cc-cd09-0410-ab3c-d52691b4dbfc